envFrom-valueFrom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: my-app-image:latest
          ports:
            - containerPort: 3000

          # Inject all variables from secret
