ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vector-replacement-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: vector.restreamer.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  vector-frontend-service
            port:
              number: 80
  - host: vector-api.restreamer.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  vector-backend-service
            port:
              number: 80   
  tls:
  - hosts:
    - vector.restreamer.in
    - vector-api.restreamer.in
    secretName: vector-tls
