mssql-and-psql.yaml
---
# 1. MSSQL Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
---
# 2. MSSQL Service
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
spec:
  selector:
    app: mssql
  ports:
  - name: tcp
    protocol: TCP
    port: 1433
    targetPort: 1433
  type: ClusterIP

---
# 3. Postgres Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14
        ports:
        - containerPort: 5432
---
# 4. Postgres Service
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
  - name: tcp
    protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP

---
# 5. Traefik IngressRouteTCP for MSSQL
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mssql-ingressroute
spec:
  entryPoints:
    - mssql
  routes:
    - match: HostSNI(`mssqldb.daworkhorse.com`)
      services:
        - name: mssql-service
          port: 1433

---
# 6. Traefik IngressRouteTCP for Postgres
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-ingressroute
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`postdb.daworkhorse.com`)
      services:
        - name: postgres-service
          port: 5432
